opam-version: "1.2"
name: "ppx_import"
version: "1.3"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "MIT"
homepage: "https://github.com/whitequark/ppx_import"
bug-reports: "https://github.com/whitequark/ppx_import/issues"
dev-repo: "git://github.com/whitequark/ppx_import.git"
tags: [ "syntax" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  "ocamlbuild" "-classic-display" "-use-ocamlfind" "src_test/test_ppx_import.byte" "--"
]
depends: [
  "ppx_tools"    {>= "0.99.1"}
  "cppo"         {build}
  "jbuilder"     {build & >= "1.0+beta12"}
  "ounit"        {test}
  "ppx_deriving" {test & >= "2.0"}
]
available: [ ocaml-version >= "4.02.0" & opam-version >= "1.2.2" ]
